--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムをペンの太さを太くして、色を少しずつ変え、120歩進んで240歩下がって80歩進み、5度回転するのを100回繰り返すものを作った。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        規則的な動きをするので花の形のようなきれいな図形ができると思った。<br>
       </div>
     </div>
 
