--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>1B班〇〇番 ニックネーム</div>
+    <div>1B班27番 広橋怜旺</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -44,7 +44,7 @@
         1.内容<br>
         スクラッチを使って落ちてくるタコスをキャッチすると点数が上がるプログラムを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        プログラムのつながっている場所を考えることができて面白かった。<br>        
       </div>
     </div>
 
