--- a/rep01.html
+++ b/rep01.html
@@ -54,9 +54,9 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://Kyushokugorira.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        自分のホームページを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        思っていたよりも簡単に作ることができたと思う。<br>        
       </div>      
     </div>
     
