--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://Kyushokugorira.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        一部を書き換え、ScratchのプログラミングについてのレポートをHTMLで作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        一部を変えるだけでよいのでレポートの作成が楽になった。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        グー、チョキ、パーのデータを集め、映像から見分けられることを体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        データを集めて、見分けられる精度を上げられることを実感した。<br>        
       </div>
     </div>
     
@@ -52,9 +52,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）会議室の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRでの操作やホワイトボードへの書き込みを行った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        立体での構造の分かりやすさがあった。周りが見えなくなるので少し危なかった。<br>
       </div>
     </div>
     
