--- a/rep03.html
+++ b/rep03.html
@@ -21,7 +21,7 @@
 <body>
   <div class=header>
     <h1>最終レポート ： 公大高専１年実習I-1</h1>
-    <div>1B班xx番 ニックネーム</div>
+    <div>1B班27番 Kyushokugorira</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
@@ -31,9 +31,9 @@
       <a href="https://Kyushokugorira.github.io/website/vr.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavascriptによるプログラミングでVR空間を表示させた。数字を変えたりして、高さや色を変えた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        <br>
       </div>
     </div>
     <div>
