--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         JavascriptによるプログラミングでVR空間を表示させた。数字を変えたりして、高さや色を変えた。<br>
         2.感想<br>
-        <br>
+        VR空間で変更した内容がすぐにわかって修正しやすかった。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://Kyushokugorira.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavaScriptによるプログラミングで伝言板を制作した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        文字を入力したものが表示されるようにするプログラムを作成して、その内容がわかった。<br>
       </div>
     </div>
 
