--- a/rep03.html
+++ b/rep03.html
@@ -52,9 +52,9 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavaScriptプログラムの3次元空間を体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        VR空間での当たり判定があったり、現実で静止した状態で動くことができたので前回よりも安全に楽しむことができた。<br>
       </div>
     </div>
   
