--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 <body>
   <div class=header>
     <h1>今日の給食</h1>
-    <div>せつめいせつめい</div>
+    <div>きょうのきゅうしょく</div>
   </div>
   <div class=main>
     <div>
-      <h2>さぶたいとる１</h2>
+      <h2>玉子焼き</h2>
       <div>
-        ほんぶん１
+        おいしかった。
       </div>
     </div>
 
     <div>
-      <h2>さぶたいとる２</h2>
+      <h2>ご飯</h2>
       <div>
-        ほんぶん２
+        ふりかけが多かった。
       </div>
     </div>
   </div>
