--- a/rep03.html
+++ b/rep03.html
@@ -54,7 +54,7 @@
         1.内容<br>
         JavaScriptプログラムの3次元空間を体験した。<br>
         2.感想<br>
-        VR空間での当たり判定があったり、現実で静止した状態で動くことができたので前回よりも安全に楽しむことができた。<br>
+        VR空間での当たり判定があったり、現実で静止して仮想空間で移動ができたので前回よりも安全に楽しむことができた。<br>
       </div>
     </div>
   
